# accessibility_by_manifest

./: .gitattributes  .gitignore  AGENTS.md  PROJECT.md  README.md  multi_agent_pdf_tagger_app.jsx  pyproject.toml  run_accessibility_manifest_pptx.py  run_pptx_to_docx_accessibility.py  v0.1.0_plan.md
.github/workflows/: ci.yml
accessibility_by_manifest/: __init__.py  errors.py  pipeline.py
archive/: README.md  README.txt  authoritative-normalized-workflow-json.json  docx-final-review-form.md  docx-short-release-form.md  docx_remediation_transformer.py  extraction_manifest.csv  invalid-example-manifest.json  manifest-field-dictionary.md  minimal-valid-example-manifest.json  normalized-workflow-architecture.txt  normalized-workflow-manifest-schema.json  normalized-workflow-markdown-view.md  normalized-workflow-yaml-mirror.yaml  powerpoint-to-word-decision-matrix.md  pptx_extract_and_manifest.py  project-current-state-report.md  project-full-report-report.md  pyproject.toml  run_pptx_docx_workflow.py  script-1-integrated-catch-up-pass.py  script-2-validation-hardening-pass.py  source-side-technical-layer.json  wordprocessingml-target-projection-layer.json
archive/pptx_docx_workflow/: __init__.py  bootstrap.py  cli.py  config.py  dependencies.py  legacy_backend.py  paths.py
archive/test_inputs/: 16_OpenStax_Psychology_CH16_ImageSlideshow.pptx  547537496-Chapter-11-Personality.pptx  9 LifespanDevelopment.pptx  Disorders_in_the_DSM5TR_Presentation.pptx
archive/test_outputs/: Disorders_in_the_DSM5TR_Presentation_companion.docx  Disorders_in_the_DSM5TR_Presentation_extract_report.md  Disorders_in_the_DSM5TR_Presentation_final.docx  Disorders_in_the_DSM5TR_Presentation_manifest.json  Disorders_in_the_DSM5TR_Presentation_manifest.yaml  Disorders_in_the_DSM5TR_Presentation_remediated.docx  Disorders_in_the_DSM5TR_Presentation_remediation_report.md  Disorders_in_the_DSM5TR_Presentation_remediation_report_final.md  Disorders_in_the_DSM5TR_Presentation_review_notes.md
archive/tests/: test_dependencies.py  test_paths.py
docs/: README.md
pdf_to_docx_accessibility/: __init__.py  cli.py  config.py  paths.py  pipeline.py
plans/: README.md  cleanup-report.md  decisions.md  module-responsibility-refactor-plan.md  pdf-manifest-evidence-sizing-policy.md  project_overview.md  start-to-finish-product-plan.md  status.md  tasks.md  v0.1-product-acceptance-pack.md
pptx_to_docx_accessibility/: __init__.py  __main__.py  accessibility.py  bootstrap.py  cli.py  config.py  dependencies.py  docx_writer.py  errors.py  extraction.py  markdown_writer.py  models.py  paths.py  pipeline.py  rendering.py  reports.py
project-file-structure-md/: DECISIONS.md  FINDINGS.md  HANDOFF.md  INTAKE.md  PLAN.md  RESEARCH-PLAN.md  STATUS.md  TASKS.md
quarantine/: README.md
reference/: links.md  pdf_accessibility_info.md  pdf_accessibility_manifest.json  pdf_to_docx_info.md  pdf_to_docx_manifest.json
scripts/: clean-local-artifacts.sh  verify.sh
tests/: test_accessibility_model.py  test_docx_manifest_pipeline.py  test_docx_writer.py  test_html_output.py  test_manifest_pipeline.py  test_markdown_writer.py  test_paths.py  test_pdf_normalization.py  test_pdf_paths.py  test_pdf_pymupdf_pipeline.py  test_projection_helpers.py  test_rendering.py  test_text_utils.py  test_vision_alt_text.py
(+314 files in other folders)
