[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accessibility-by-manifest"
version = "0.1.0"
description = "Manifest-centered accessibility pipelines for extracting, normalizing, and projecting documents."
requires-python = ">=3.11"
dependencies = [
  "jsonschema",
  "PyMuPDF",
  "pypdf",
  "pikepdf",
  "pdfminer.six",
  "python-pptx",
  "python-docx",
  "PyYAML",
  "langgraph",
  "pydantic",
  "typer",
]

[project.optional-dependencies]
ocr = [
  "python-doctr",
]

[project.scripts]
accessibility-manifest-pptx = "accessibility_by_manifest.cli.pptx:main"
accessibility-manifest-pdf = "accessibility_by_manifest.cli.pdf:main"
accessibility-manifest-docx = "accessibility_by_manifest.cli.docx:main"
accessibility-vision-alt-text = "accessibility_by_manifest.cli.vision_alt_text:main"
pdf-accessibility = "pdf_accessibility.cli:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["accessibility_by_manifest*", "pdf_accessibility*"]
exclude = ["archive*", "test_inputs*", "test_outputs*", "tests*"]

[tool.setuptools.package-data]
accessibility_by_manifest = ["manifest/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
