[project]
name = "pptx-docx-workflow"
version = "0.1.0"
description = "PPTX-to-DOCX accessibility remediation workflow"
requires-python = ">=3.11"
dependencies = [
  "python-pptx",
  "python-docx",
  "PyYAML",
]

[project.scripts]
pptx-docx-workflow = "pptx_docx_workflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
